# rules_nasm

./: .bazelignore  MODULE.bazel
.github/workflows/: ci.bazelrc  docs.yaml  tests.yaml
docs/: README.md
e2e/: test.sh
e2e/c_library/libadd/: BUILD.bazel
e2e/c_library/libeq/: BUILD.bazel
examples/cross_compilation/hello/: BUILD.bazel
nasm/: BUILD.bazel  defs.bzl
nasm/private/: BUILD.bazel  nasm_toolchain.bzl
nasm/private/rules/: BUILD.bazel  binary.bzl  common.bzl  library.bzl  test.bzl
nasm/toolchain/: BUILD.bazel
tests/: BUILD.bazel
