module(
    name = "rules_nasm",
    version = "0.0.0",
)

bazel_dep(name = "bazel_features", version = "1.21.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

bazel_dep(name = "protobuf", version = "29.0", dev_dependency = True, repo_name = "com_google_protobuf")
bazel_dep(name = "rules_rust_mdbook", version = "0.59.1", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.3.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)

nasm = use_extension("//nasm:extensions.bzl", "nasm")
nasm.toolchain(
    _repo_name = "nasm_test_toolchains",
    nasm_version = "2.16.03",
)
nasm.toolchain(
    _repo_name = "nasm_test_toolchains",
    nasm_version = "2.16.02",
)
nasm.toolchain(
    _repo_name = "nasm_test_toolchains",
    nasm_version = "2.16.01",
)
use_repo(nasm, "nasm_test_toolchains", "nasm_toolchains")

register_toolchains("@nasm_toolchains//:all")
