load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# TODO: https://github.com/bazelbuild/rules_cc/issues/279
bzl_library(
    name = "rules_cc",
    srcs = ["@rules_cc//cc:bzl_srcs"],
    deps = ["@rules_cc//cc/common"],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":rules_cc"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":common"],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":common"],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":common"],
)
